# TEAM-106

./: .gitignore  Procfile  README.md  app.properties  manage.py  package.json  pyproject.toml  requirements.txt
Scrape/: clean.py  country.csv  extractProfilesData.py  getProfilesLinks.py  new.csv  stackGreat.csv  stat.py  wordings.txt
backend/: settings.py  urls.py  views.py
devdata/: urls.py  views.py
devdatazone/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
devdatazone/devdata/: apps.py  urls.py
devdatazone/static/: staticfiles.json
public/: index.html
src/: App.css  App.js  app.py  index.js
src/components/Header/: Header.css  Header.js
src/components/Home/: Home.css  Home.js
src/components/NotFound/: NotFound.css  NotFound.js
src/components/navigationbar/: navigationbar.css  navigationbar.js
static/css/: style.css
static/js/: main.js
staticfiles/: staticfiles.json
staticfiles/css/: flaticon.b5af49b045b0.css  flaticon.css  gijgo.10da8acadf5c.css  owl.carousel.min.css  style.7451e17690d1.css  style.css  theme-default.5c3088dd7ee7.css  themify-icons.a05d7eed05fe.css
staticfiles/fonts/: flaticon.5f01c0c96a3d.css
templates/: about.html  blog.html  contact.html  elements.html  index.html  main.html  portfolio.html  portfolio_details.html  service.html  single-blog.html
