[tool.poetry]
name = "team-106"
version = "0.1.0"
description = ""

authors = [
    "Oyedokun Temitayo <oyes2011@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
djangorestframework = "^3.11"
whitenoise = "^5.0"
django-heroku = "^0.3.1"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

